# LIBS_Simulation

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
Hartig_Code/: NIST_Saha_Onion-LIBS-Spectrum.py  Onion-LIBS-Spectrum.py  nist_al_cache.csv
data/experimental/: README.md
docs/: README.md  ai_instructions.md  architecture.md  development_rules.md  implementation_plan.md  index.md  methods_outline.md  project_goal.md  reference.md  validation_strategy.md
docs/javascripts/: mathjax.js
docs/reference/: analysis.md  atomic.md  constants_units.md  core.md  instrument.md  physics.md  plasma_state.md  reference.md  spectrum.md  temporal.md  transport.md  validation.md
examples/: README.md  digitize_hansen_naD.py  validate_aluminum.py  validate_sodium.py  validate_sodium_hansen.py  validate_sodium_hansen_onion.py
examples/output/: README.md
libssim/core/: __init__.py  mkdocs.yml  spectrum.py  state.py  units.py
site/: 404.html  index.html  objects.inv
site/ai_instructions/: index.html
site/architecture/: index.html
site/development_rules/: index.html
site/implementation_plan/: index.html
site/methods_outline/: index.html
site/project_goal/: index.html
site/reference/: index.html
site/reference/atomic/: index.html
site/search/: search_index.json
site/validation_strategy/: index.html
src/libssim/: __init__.py  analysis.py
tests/: conftest.py  test_analysis.py
tests/instrument/: test_noise.py  test_optics_response.py  test_spectrometer.py
tests/physics/: conftest.py  test_boltzmann.py  test_continuum.py  test_emission.py  test_line_profiles.py  test_partition.py  test_saha.py
tests/temporal/: test_decay_models.py  test_integrator.py
tests/transport/: conftest.py  test_emissivity.py  test_geometry.py  test_radiative.py
tests/unit/: test_atomic.py  test_spectrum.py  test_state.py  test_units.py
tests/validation/: test_validation.py
(+44 files in other folders)
