[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libssim"
version = "0.1.0"
description = "Forward modeling framework for Laser-Induced Breakdown Spectroscopy"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["libssim*"]